# SIGIL

./: .gitignore  .needle-predispatch-sha  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  test_phase_3_2_scrubber_verification.sh  test_startup_modes.sh
.beads/: issues.jsonl
.cargo/: config.toml
crates/sigil-backend-aws/: Cargo.toml
crates/sigil-backend-aws/src/: lib.rs
crates/sigil-backend-env/: Cargo.toml
crates/sigil-backend-env/src/: lib.rs
crates/sigil-backend-onepassword/: Cargo.toml
crates/sigil-backend-onepassword/src/: lib.rs
crates/sigil-backend-pass/: Cargo.toml
crates/sigil-backend-pass/src/: lib.rs
crates/sigil-backend-sops/: Cargo.toml
crates/sigil-backend-sops/src/: lib.rs
crates/sigil-backend-vault/: Cargo.toml
crates/sigil-backend-vault/src/: lib.rs
crates/sigil-bench/: Cargo.toml
crates/sigil-bench/benches/: crypto_bench.rs  ipc_bench.rs  parser_bench.rs  sandbox_bench.rs  scrub_bench.rs  vault_bench.rs
crates/sigil-bench/src/: lib.rs  scrubber.rs  vault.rs
crates/sigil-canary/: Cargo.toml
crates/sigil-canary/src/: canary.rs  generator.rs  lib.rs  monitor.rs
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: archive.rs  audit.rs  doctor.rs  execute.rs  help.rs  hooks.rs  main.rs  migrate.rs  troubleshoot.rs  uninstall.rs
crates/sigil-core/: Cargo.toml
crates/sigil-core/src/: audit.rs  error.rs  install_manifest.rs  ipc.rs  keyring.rs  lease.rs  lib.rs  lifecycle.rs  manifest.rs  monitor.rs  operations.rs  parser.rs  scanner.rs  terminal.rs  types.rs  versions.rs
crates/sigil-core/tests/: proptest_parser.proptest-regressions  proptest_parser.rs
crates/sigil-credential-docker/: Cargo.toml
crates/sigil-credential-docker/src/: main.rs
crates/sigil-credential-git/: Cargo.toml
crates/sigil-credential-git/src/: lib.rs  main.rs
crates/sigil-daemon/: Cargo.toml
crates/sigil-daemon/src/: alerts.rs  audit.rs  canary_manager.rs  ci_bridge.rs  client.rs  filesystem_monitor.rs  lease_tracker.rs  lib.rs  main.rs  memory.rs  ondemand.rs  proxy.rs  server.rs  signals.rs  vault.rs
crates/sigil-daemon/tests/: hardening_test.rs  red_team_checkpoint.rs  runtime_hardening_verification.rs  startup_modes.rs  startup_modes_verification_summary.md
crates/sigil-fuse/: Cargo.toml
crates/sigil-fuse/src/: filesystem.rs  formatter.rs  lib.rs  main.rs  mount.rs
crates/sigil-integration-tests/: Cargo.toml  verify_phase1_3_1.sh  verify_phase5_5_5_7.sh
crates/sigil-integration-tests/notes/: phase2_2_2.3_verification.md
crates/sigil-integration-tests/src/: lib.rs
crates/sigil-integration-tests/tests/: accessibility_test.rs  agent_setup_test.rs  common.rs  daemon_hardening_test.rs  daemon_startup_test.rs  decoy_and_lockdown_test.rs  doctor_test.rs  fuse_security_test.rs  phase1_3_1_verification_test.rs  phase1_3_verification_test.rs  phase1_4_cli_docs_verification_test.rs  phase1_5_6_7_verification_test.rs  phase1_redteam_checkpoint_bf4o47.rs  phase1_redteam_test.rs  phase2_4_startup_modes_verification_test.rs  phase2_audit_ipc_signals_test.rs  phase2_audit_lifecycle_test.rs  phase2_client_audit_test.rs  phase2_ipc_protocol_test.rs  phase2_redteam_test.rs  phase2_signal_handling_test.rs  phase3_3_3_4_verification_test.rs  phase3_redteam_test.rs  phase4_1_4_2_sandbox_verification_test.rs  phase4_1_4_2_verification_test.rs  phase4_3_4_4_verification_test.rs  phase4_5_4_6_verification_test.rs  phase4_e2e_redteam_test.rs  phase4_redteam_test.rs  phase5_1_claude_code_hook_verification_test.rs  phase5_2_non_bash_tool_hooks_test.rs  phase5_2_verification_test.rs  phase5_3_5_4_verification_test.rs  phase5_5_5_7_verification_test.rs  phase5_redteam_test.rs  phase6_1_tui_verification_test.rs  phase6_redteam_test.rs  phase7_redteam_test.rs  phase8_redteam_test.rs  phase9_4_5_6_verification_test.rs  (+4 more)
crates/sigil-mcp/: Cargo.toml
crates/sigil-mcp/src/: main.rs
crates/sigil-proxy/: Cargo.toml
crates/sigil-proxy/src/: config.rs  error.rs  lib.rs  main.rs  proxy.rs  rules.rs  scrubber.rs  signing.rs  tls.rs  vault.rs
crates/sigil-proxy/tests/: proxy_integration.rs
crates/sigil-redteam/: Cargo.toml
crates/sigil-redteam/src/: attack.rs  lib.rs  playbook.rs  report.rs  tui.rs
crates/sigil-sandbox/: Cargo.toml
crates/sigil-sandbox/src/: bubblewrap.rs  injection.rs  landlock.rs  lib.rs  seatbelt.rs  secure_fd.rs  state.rs
crates/sigil-scrub/: Cargo.toml
crates/sigil-scrub/src/: lib.rs  scrubber.rs
crates/sigil-scrub/tests/: proptest_scrubber.proptest-regressions  proptest_scrubber.rs
crates/sigil-sdk/: Cargo.toml
crates/sigil-sdk-nodejs/: Cargo.toml  README.md  build.rs  index.d.ts  index.js  package.json  test.js
crates/sigil-sdk-nodejs/src/: lib.rs
crates/sigil-sdk-python/: Cargo.toml
crates/sigil-sdk-python/src/: lib.rs
crates/sigil-sdk/examples/: basic.rs  list.rs  request_access.rs  resolve.rs
crates/sigil-sdk/src/: client.rs  lib.rs
crates/sigil-shamir/: Cargo.toml
crates/sigil-shamir/src/: lib.rs  slip39.rs  sss.rs  wordlist.txt
crates/sigil-shell/: Cargo.toml
crates/sigil-shell/src/: main.rs
crates/sigil-signatures/: Cargo.toml
crates/sigil-signatures/src/: builtins.rs  config.rs  lib.rs  matcher.rs  update.rs
crates/sigil-ssh-agent/: Cargo.toml
crates/sigil-ssh-agent/src/: agent.rs  keys.rs  lib.rs  main.rs  protocol.rs
crates/sigil-tui/: Cargo.toml
crates/sigil-tui/src/: approval.rs  lib.rs  main.rs
docs/: README.md  STYLE.md  SUMMARY.md  book.toml  concepts.md  demo.sh  faq.md  phase-1.3.1-verification-summary.md  phase-1.5-1.7-verification-summary.md  phase-4.5-4.6-toctou-and-pipeline-verification.md  quick-reference.md  quickstart.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: archive_format.rs  command_parser.rs  ipc_protocol.rs  output_scrubber.rs
notes/: bf-13g.md  bf-1f3q-phase-4.3-4.4-verification-summary.md  bf-1it8.md  bf-1m31.md  bf-1m31_scrubber_verification.md  bf-1qs-phase-2-verification-summary.md  bf-1qs.md  bf-1ubr-verification-summary.md  bf-1ubr.md  bf-1w9-phase5-verification.md  bf-250j.md  bf-263n.md  bf-2e1.md  (+54 more)
(+102 files in other folders)
