[workspace]
resolver = "2"
members = [
    "crates/sigil-core",
    "crates/sigil-vault",
    "crates/sigil-cli",
    "crates/sigil-daemon",
    "crates/sigil-sandbox",
    "crates/sigil-scrub",
    "crates/sigil-canary",
    "crates/sigil-tui",
    "crates/sigil-mcp",
    "crates/sigil-shell",
    "crates/sigil-proxy",
    "crates/sigil-sdk",
    "crates/sigil-sdk-python",
    "crates/sigil-signatures",
    "crates/sigil-credential-git",
    "crates/sigil-credential-docker",
    "crates/sigil-ssh-agent",
    "crates/sigil-redteam",
    "crates/sigil-sdk-nodejs",
    "crates/sigil-backend-env",
    "crates/sigil-backend-pass",
    "crates/sigil-backend-sops",
    "crates/sigil-backend-vault",
    "crates/sigil-backend-onepassword",
    "crates/sigil-backend-aws",
    "crates/sigil-shamir",
    "crates/sigil-integration-tests",
    "crates/sigil-bench",
]
exclude = [
    "crates/sigil-fuse",  # Requires fuse3 dev library (libfuse3-dev on Debian/Ubuntu)
    "crates/sigil-sdk-nodejs",  # Requires napi-rs build system (pre-built .node file included)
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
authors = ["SIGIL Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sigil-rs/sigil"
homepage = "https://github.com/sigil-rs/sigil"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Cryptography
age = { version = "0.10", features = ["armor"] }
rage = { version = "0.10" }
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"

# Secret handling
zeroize = "1.8"
secrecy = { version = "0.10", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# IPC
tokio-uds = "0.2"
serde-bencode = "0.2"

# Sandbox
nix = { version = "0.29", features = ["user", "fs", "sched", "socket", "process"] }
libc = "0.2"

# Filesystem monitoring
notify = "7.0"

# FUSE
fuser = "0.14"

# HTTP proxy
hyper = { version = "1.4", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"

# MCP (serde is enough for JSON-RPC 2.0)

# Testing
tempfile = "3.12"
mockall = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
bytes = "1.7"
base64 = "0.22"
hex = "0.4"
fs_extra = "1.3"
regex = "1.11"
serde_yaml = "0.9"
urlencoding = "2.1"
hmac = "0.12"
dirs = "6.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 0
