[package]
name = "sigil-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sigil-core = { path = "../crates/sigil-core" }
sigil-scrub = { path = "../crates/sigil-scrub" }
sigil-vault = { path = "../crates/sigil-vault" }
sigil-daemon = { path = "../crates/sigil-daemon" }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
age = { version = "0.11", features = ["cli-common"] }

# Prevent workspace dependency inheritance
[workspace]

[[bin]]
name = "command_parser"
path = "fuzz_targets/command_parser.rs"

[[bin]]
name = "output_scrubber"
path = "fuzz_targets/output_scrubber.rs"

[[bin]]
name = "archive_format"
path = "fuzz_targets/archive_format.rs"

[[bin]]
name = "ipc_protocol"
path = "fuzz_targets/ipc_protocol.rs"
