[package]
name = "sigil-backend-aws"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AWS Secrets Manager backend for SIGIL"

[dependencies]
sigil-core = { path = "../sigil-core", version = "=0.4.0" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.46"
aws-smithy-runtime = "1.7"

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Secret handling
zeroize = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
