[package]
name = "sigil-backend-onepassword"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "1Password backend for SIGIL"

[dependencies]
sigil-core = { path = "../sigil-core" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client (for Connect API support, optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Secret handling
zeroize = { workspace = true }
secrecy = { workspace = true }

[features]
default = ["cli"]
cli = []
connect = ["reqwest"]

[dev-dependencies]
tempfile = { workspace = true }
