[package]
name = "sigil-canary"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Workspace dependencies
sigil-core = { path = "../sigil-core", version = "0.2.0" }
sigil-scrub = { path = "../sigil-scrub", version = "0.2.0" }

anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["fs", "socket", "fanotify"] }
