[package]
name = "sigil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types and traits for SIGIL secret management"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Secret handling
zeroize = { workspace = true }
secrecy = { workspace = true }

# Cryptography
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# Parsing
regex = "1"
lazy_static = "1"

# Platform-specific
nix = { workspace = true }
which = "7"
atty = "0.2"
terminal_size = "0.4"

# Filesystem monitoring
notify = { workspace = true }

# Time
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.5"
