[package]
name = "sigil-fuse"
version.workspace = true
edition = "2021"
rust-version = "1.75"
authors = ["SIGIL Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sigil-rs/sigil"
homepage = "https://github.com/sigil-rs/sigil"
description = "FUSE virtual filesystem for SIGIL exposing secrets as files"

[[bin]]
name = "sigil-fuse"
path = "src/main.rs"

[dependencies]
sigil-core = { path = "../sigil-core", version = "=0.3.0" }

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# FUSE
fuser = "0.14"

# System bindings
libc = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.12"
