[package]
name = "sigil-integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
sigil-core = { path = "../sigil-core", version = "=0.4.0" }
sigil-vault = { path = "../sigil-vault", version = "=0.4.0" }
sigil-canary = { path = "../sigil-canary", version = "=0.4.0" }
sigil-tui = { path = "../sigil-tui", version = "=0.4.0" }
sigil-sdk = { path = "../sigil-sdk", version = "=0.4.0" }
sigil-credential-git = { path = "../sigil-credential-git", version = "=0.4.0" }
sigil-proxy = { path = "../sigil-proxy", version = "=0.4.0" }
sigil-scrub = { path = "../sigil-scrub", version = "=0.4.0" }
tempfile = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
urlencoding = { workspace = true }
tokio = { workspace = true }
age = { workspace = true }
chrono = { workspace = true }
walkdir = "2.5"
serde_json = { workspace = true }

# Note: sigil-cli, sigil-daemon, sigil-mcp, sigil-fuse, sigil-credential-docker, and sigil-ssh-agent
# are binary-only crates (no lib target). Integration tests verify their implementation
# by reading source code directly.
