[package]
name = "sigil-redteam"
version.workspace = true
edition = "2021"

[dependencies]
sigil-core = { path = "../sigil-core", version = "=0.4.0" }
sigil-scrub = { path = "../sigil-scrub", version = "=0.4.0" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
async-trait = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
