[package]
name = "sigil-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Sandbox implementation for SIGIL using bubblewrap, landlock, and seatbelt"

[dependencies]
sigil-core = { path = "../sigil-core", version = "0.2.0" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Sandbox
nix = { workspace = true }
libc = { workspace = true }

# Utilities
dirs = "6.0"
shell-words = "1.0"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
