[package]
name = "sigil-sdk-nodejs"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
sigil-core = { path = "../sigil-core", version = "=0.4.0" }
sigil-sdk = { path = "../sigil-sdk", version = "=0.4.0" }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# Node.js FFI via napi-rs
napi = { version = "3.0", default-features = false, features = ["napi8", "async"] }
napi-derive = "3.0"

[build-dependencies]
napi-build = "2.1"
