[package]
name = "sigil-shamir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
rand = "0.8"
zeroize = "1.8"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"

# SLIP39 wordlist
once_cell = "1.19"

[dev-dependencies]
hex = "0.4"
