[package]
name = "sigil-shamir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = "0.8"
zeroize = { workspace = true }

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"

# SLIP39 wordlist
once_cell = "1.19"

[dev-dependencies]
hex = "0.4"
