[package]
name = "sigil-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "POSIX-compatible shell wrapper for SIGIL"

[[bin]]
name = "sigil-shell"
path = "src/main.rs"

[dependencies]
sigil-core = { path = "../sigil-core", version = "=0.4.0" }
sigil-sandbox = { path = "../sigil-sandbox", version = "=0.4.0" }
sigil-daemon = { path = "../sigil-daemon", version = "=0.4.0" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Utilities
dirs = "6.0"
shell-words = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
temp-env = "0.3"
