[package]
name = "sigil-signatures"
version.workspace = true
edition = "2021"
description = "Command signature database and matching for transparent secret injection"

[dependencies]
sigil-core = { path = "../sigil-core", version = "=0.4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
regex = "1.10"
once_cell = "1.19"
tracing = "0.1"
glob = "0.3"
anyhow = "1.0"

# HTTP client for fetching signatures
ureq = { version = "2.9", features = ["json"] }

# Checksum verification
sha2 = "0.10"
hex = "0.4"

# File operations
dirs = "5.0"

# Version parsing
semver = "1.0"

[dev-dependencies]
tempfile = "3.8"
