[package]
name = "sigil-ssh-agent"
version.workspace = true
edition = "2021"
description = "SSH agent protocol implementation for SIGIL"

[lib]
name = "sigil_ssh_agent"
path = "src/lib.rs"

[[bin]]
name = "sigil-ssh-agent"
path = "src/main.rs"

[dependencies]
sigil-core = { path = "../sigil-core", version = "0.2.0" }
sigil-vault = { path = "../sigil-vault", version = "0.2.0" }
sigil-sdk = { path = "../sigil-sdk", version = "0.2.0" }
sigil-tui = { path = "../sigil-tui", version = "0.2.0" }

anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
hex = "0.4"
bytes = "1.9"
byteorder = "1.0"
sha2 = "0.10"
rsa = "0.9"
ssh-key = { version = "0.6", features = ["alloc", "std"] }
libc = "0.2"
tempfile = "3.16"

[dev-dependencies]
tokio-test = "0.4"
